test/invalid-semantics/54483_undeclared_variable/undeclared_variable.mag
-- Author: 54483, Pedro Barata

-- Semantic error: variable 'z' is never declared

fun main (_) : Unit -> Unit =
  print(z + 1)
